Fixed `getPatterns`